Bug 267888 - plasma-desktop crash while changing desktop [TaskItemLayout::layoutItems, TaskItemLayout::insert, TaskItemLayout::addTaskItem]
Summary: plasma-desktop crash while changing desktop [TaskItemLayout::layoutItems, Tas...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 265697 267548 268295 269409 270584 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-03-07 17:52 UTC by Laurent Bonnaud
Modified: 2011-04-11 14:29 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent Bonnaud 2011-03-07 17:52:57 UTC
Application: plasma-desktop (0.4)
KDE Platform Version: 4.6.1 (4.6.1)
Qt Version: 4.7.0
Operating System: Linux 2.6.35-28-generic-pae i686
Distribution: Ubuntu 10.10

-- Information about the crash:
- What I was doing when the application crashed:

Rolling the mouse wheel over the pager to change desktops.

This is with KDE 4.6.1 in Kubuntu 10.10.

-- Backtrace:
Application: Plasma Desktop Shell (plasma-desktop), signal: Segmentation fault
[Current thread is 1 (Thread 0xb2910720 (LWP 2496))]

Thread 3 (Thread 0xb1aadb70 (LWP 2497)):
#0  0xb77c8424 in __kernel_vsyscall ()
#1  0xb768cdf6 in __poll (fds=0xb7723ff4, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#2  0xb367ca1b in g_poll (fds=0x998b048, nfds=1, timeout=-1) at /build/buildd/glib2.0-2.26.1/glib/gpoll.c:132
#3  0xb366f43c in g_main_context_poll (context=0x998ec00, block=<value optimized out>, dispatch=1, self=0x99980f0) at /build/buildd/glib2.0-2.26.1/glib/gmain.c:3093
#4  g_main_context_iterate (context=0x998ec00, block=<value optimized out>, dispatch=1, self=0x99980f0) at /build/buildd/glib2.0-2.26.1/glib/gmain.c:2775
#5  0xb366fba7 in g_main_loop_run (loop=0x998ec80) at /build/buildd/glib2.0-2.26.1/glib/gmain.c:2988
#6  0xb20b59c4 in gdbus_shared_thread_func (data=0x0) at /build/buildd/glib2.0-2.26.1/gio/gdbusprivate.c:277
#7  0xb369648f in g_thread_create_proxy (data=0x99980f0) at /build/buildd/glib2.0-2.26.1/glib/gthread.c:1897
#8  0xb3711cc9 in start_thread (arg=0xb1aadb70) at pthread_create.c:304
#9  0xb769b69e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 2 (Thread 0xa940fb70 (LWP 2501)):
#0  0xb77c8424 in __kernel_vsyscall ()
#1  0xb768cdf6 in __poll (fds=0xb7723ff4, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#2  0xb367ca1b in g_poll (fds=0x9fe55e8, nfds=1, timeout=-1) at /build/buildd/glib2.0-2.26.1/glib/gpoll.c:132
#3  0xb366f43c in g_main_context_poll (context=0x9fe3f78, block=<value optimized out>, dispatch=1, self=0x9fe4ac0) at /build/buildd/glib2.0-2.26.1/glib/gmain.c:3093
#4  g_main_context_iterate (context=0x9fe3f78, block=<value optimized out>, dispatch=1, self=0x9fe4ac0) at /build/buildd/glib2.0-2.26.1/glib/gmain.c:2775
#5  0xb366f848 in g_main_context_iteration (context=0x9fe3f78, may_block=1) at /build/buildd/glib2.0-2.26.1/glib/gmain.c:2843
#6  0xb65e759f in QEventDispatcherGlib::processEvents (this=0x9fdb5b0, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#7  0xb65b7609 in QEventLoop::processEvents (this=0xa940f280, flags=) at kernel/qeventloop.cpp:149
#8  0xb65b7a8a in QEventLoop::exec (this=0xa940f280, flags=...) at kernel/qeventloop.cpp:201
#9  0xb64b3b7e in QThread::exec (this=0x9fe4298) at thread/qthread.cpp:490
#10 0xb659635b in QInotifyFileSystemWatcherEngine::run (this=0x9fe4298) at io/qfilesystemwatcher_inotify.cpp:248
#11 0xb64b6df9 in QThreadPrivate::start (arg=0x9fe4298) at thread/qthread_unix.cpp:266
#12 0xb3711cc9 in start_thread (arg=0xa940fb70) at pthread_create.c:304
#13 0xb769b69e in clone () at ../sysdeps/unix/sysv/linux/i386/clone.S:130

Thread 1 (Thread 0xb2910720 (LWP 2496)):
[KCrash Handler]
#7  0xae974e54 in TaskItemLayout::layoutItems (this=<value optimized out>) at ../../../../../plasma/desktop/applets/tasks/taskitemlayout.cpp:347
#8  0xae975868 in TaskItemLayout::insert (this=0x9edb7c8, index=0, item=0xa643720) at ../../../../../plasma/desktop/applets/tasks/taskitemlayout.cpp:149
#9  0xae975a57 in TaskItemLayout::addTaskItem (this=0x9edb7c8, item=0xa643720) at ../../../../../plasma/desktop/applets/tasks/taskitemlayout.cpp:102
#10 0xae983cba in TaskGroupItem::itemAdded (this=0x9ecd318, groupableItem=0xa4024d8) at ../../../../../plasma/desktop/applets/tasks/taskgroupitem.cpp:509
#11 0xae98312a in TaskGroupItem::reload (this=0x9ecd318) at ../../../../../plasma/desktop/applets/tasks/taskgroupitem.cpp:330
#12 0xae9835bb in TaskGroupItem::setGroup (this=0x9ecd318, group=0xa49dd08) at ../../../../../plasma/desktop/applets/tasks/taskgroupitem.cpp:379
#13 0xae96d841 in Tasks::reload (this=0x9cfee08) at ../../../../../plasma/desktop/applets/tasks/tasks.cpp:266
#14 0xae96ef63 in Tasks::qt_metacall (this=0x9cfee08, _c=QMetaObject::InvokeMetaMethod, _id=67, _a=0xbfd4c9fc) at ./tasks.moc:99
#15 0xb65be8ca in QMetaObject::metacall (object=0x9cfee08, cl=QMetaObject::ReadProperty, idx=67, argv=0xbfd4c9fc) at kernel/qmetaobject.cpp:237
#16 0xb65d16ad in QMetaObject::activate (sender=0x9bc2cd0, m=0xae9cfbd0, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3280
#17 0xae9a1277 in TaskManager::GroupManager::reload (this=0x9bc2cd0) at ./groupmanager.moc:130
#18 0xae9a52be in TaskManager::GroupManagerPrivate::actuallyReloadTasks (this=0x9ecbd10) at ../../../libs/taskmanager/groupmanager.cpp:191
#19 0xae9a796e in TaskManager::GroupManager::qt_metacall (this=0x9bc2cd0, _c=QMetaObject::InvokeMetaMethod, _id=14, _a=0xbfd4cbac) at ./groupmanager.moc:117
#20 0xb65be8ca in QMetaObject::metacall (object=0x9bc2cd0, cl=QMetaObject::ReadProperty, idx=18, argv=0xbfd4cbac) at kernel/qmetaobject.cpp:237
#21 0xb65d16ad in QMetaObject::activate (sender=0x9ecbd48, m=0xb66eb5a4, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3280
#22 0xb66231e7 in QTimer::timeout (this=0x9ecbd48) at .moc/release-shared/moc_qtimer.cpp:134
#23 0xb65d71ce in QTimer::timerEvent (this=0x9ecbd48, e=0xbfd4d0e0) at kernel/qtimer.cpp:271
#24 0xb65cb504 in QObject::event (this=0x9ecbd48, e=0x1) at kernel/qobject.cpp:1183
#25 0xb5ab7fdc in QApplicationPrivate::notify_helper (this=0x995eab0, receiver=0x9ecbd48, e=0xbfd4d0e0) at kernel/qapplication.cpp:4396
#26 0xb5abe04e in QApplication::notify (this=0x99529f8, receiver=0x9ecbd48, e=0xbfd4d0e0) at kernel/qapplication.cpp:3798
#27 0xb6c1b7da in KApplication::notify (this=0x99529f8, receiver=0x9ecbd48, event=0xbfd4d0e0) at ../../kdeui/kernel/kapplication.cpp:311
#28 0xb65b8b3b in QCoreApplication::notifyInternal (this=0x99529f8, receiver=0x9ecbd48, event=0xbfd4d0e0) at kernel/qcoreapplication.cpp:732
#29 0xb65eaad6 in sendEvent (this=0x995ffcc) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#30 QTimerInfoList::activateTimers (this=0x995ffcc) at kernel/qeventdispatcher_unix.cpp:602
#31 0xb65e7874 in timerSourceDispatch (source=0x995ff98) at kernel/qeventdispatcher_glib.cpp:184
#32 0xb366b855 in g_main_dispatch (context=0x991a388) at /build/buildd/glib2.0-2.26.1/glib/gmain.c:2149
#33 g_main_context_dispatch (context=0x991a388) at /build/buildd/glib2.0-2.26.1/glib/gmain.c:2702
#34 0xb366f668 in g_main_context_iterate (context=0x991a388, block=<value optimized out>, dispatch=1, self=0x995ea88) at /build/buildd/glib2.0-2.26.1/glib/gmain.c:2780
#35 0xb366f848 in g_main_context_iteration (context=0x991a388, may_block=1) at /build/buildd/glib2.0-2.26.1/glib/gmain.c:2843
#36 0xb65e7565 in QEventDispatcherGlib::processEvents (this=0x99511a0, flags=...) at kernel/qeventdispatcher_glib.cpp:415
#37 0xb5b79be5 in QGuiEventDispatcherGlib::processEvents (this=0x99511a0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#38 0xb65b7609 in QEventLoop::processEvents (this=0xbfd4d3a4, flags=) at kernel/qeventloop.cpp:149
#39 0xb65b7a8a in QEventLoop::exec (this=0xbfd4d3a4, flags=...) at kernel/qeventloop.cpp:201
#40 0xb65bc00f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#41 0xb5ab6e07 in QApplication::exec () at kernel/qapplication.cpp:3672
#42 0xb7788f97 in kdemain (argc=1, argv=0xbfd4d5b4) at ../../../../plasma/desktop/shell/main.cpp:118
#43 0x080485bb in main (argc=1, argv=0xbfd4d5b4) at plasma-desktop_dummy.cpp:3

This bug may be a duplicate of or related to bug 267548.

Possible duplicates by query: bug 267548, bug 266400, bug 265697, bug 264167, bug 257596.

Reported using DrKonqi
Comment 1 Aaron J. Seigo 2011-03-07 18:15:31 UTC
Git commit 941b0e313292438909342c5be3f04a2152aa13da by Aaron Seigo.
Committed on 07/03/2011 at 18:11.
Pushed by aseigo into branch 'KDE/4.6'.

check that we hava an item to query

BUG:267888

M  +1    -1    plasma/desktop/applets/tasks/taskitemlayout.cpp     

http://commits.kde.org/kde-workspace/941b0e313292438909342c5be3f04a2152aa13da
Comment 2 Aaron J. Seigo 2011-03-07 18:15:31 UTC
Git commit 48d2973089f695e9b70a7b5afe0bbb26e2bc5b44 by Aaron Seigo.
Committed on 07/03/2011 at 18:11.
Pushed by aseigo into branch 'master'.

check that we hava an item to query

BUG:267888

M  +1    -1    plasma/desktop/applets/tasks/taskitemlayout.cpp     

http://commits.kde.org/kde-workspace/48d2973089f695e9b70a7b5afe0bbb26e2bc5b44
Comment 3 Laurent Bonnaud 2011-03-07 18:23:23 UTC
Impressive, that was fast!  
I am looking forward to KDE 4.6.2...
Thank you for the fix!
Comment 4 Dario Andres 2011-03-07 22:23:39 UTC
*** Bug 267548 has been marked as a duplicate of this bug. ***
Comment 5 Dario Andres 2011-03-07 22:23:41 UTC
*** Bug 265697 has been marked as a duplicate of this bug. ***
Comment 6 Beat Wolf 2011-03-26 12:53:12 UTC
*** Bug 269409 has been marked as a duplicate of this bug. ***
Comment 7 Beat Wolf 2011-04-11 14:29:17 UTC
*** Bug 270584 has been marked as a duplicate of this bug. ***
Comment 8 Beat Wolf 2011-04-11 14:29:20 UTC
*** Bug 268295 has been marked as a duplicate of this bug. ***