check that we hava an item to query

BUG:267888